--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<p> Testi Filu </p>
 	<div class="jumbotron">
+		<span class="border border-warning"></span>
   <h1 class="display-4">Hello, world!</h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-4">
